--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,128 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+@import 'semantic-ui-css/semantic.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;900&display=swap');
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Montserrat', sans-serif;
+  background-color: #f1f2f3 !important;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.fw-800 {
+  font-weight: 900;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.title-description {
+  font-size: 16px;
+  color: '#6b7280';
+}
+
+.flex {
+  display: flex;
+}
+.title-quote {
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 2rem;
+}
+.quote-image {
+  width: 50px;
+  height: 50px;
+  margin-top: 2rem;
+}
+
+.padding-section {
+  padding: 110px 0 80px 0 !important;
+}
+.padding-reviews {
+  padding: 3rem 0 !important;
+}
+.ui.vertical.segment {
+  border: none !important;
+}
+
+.cta-section {
+  background-color: white !important;
+    padding: 6rem 0 !important;
+}
+
+.container-contact {
+  background: #6435c9!important;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  color: rgb(38, 38, 38) !important;
+  box-shadow: 0px 4px 6px rgb(0 0 0 / 10%) !important;
+  display: flex !important;
+  padding: 10rem 0rem;
+  margin-bottom: 3.5rem !important;
+  text-align: center !important;
+}
+
+.container-contact .grid {
+  width: 100% !important;
+}
+
+.number-input {
+  width: 20rem !important;
+}
+
+.white {
+  color: white !important;
+}
+
+.contact-input {
+  height: 100%;
+  margin-right: 1rem;
+}
+
+.center {
+  text-align: center !important;
+}
+
+.header-line {
+  background-color: #6435c9 !important;
+  height: 116px !important;
+  border-bottom-right-radius: 8px !important;
+  border-bottom-left-radius: 8px !important;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1) !important;
+  display: flex !important;
+  align-items: center !important;
+}
+
+.item-menu {
+  text-align: right;
+  margin-right: 1.5rem !important;
+  font-size: 16px !important;
+  color: white;
+  cursor: pointer;
+}
+
+.item-menu:hover {
+  color: black;
+}
+
+.ml-2 {
+  margin-left: 2rem !important;
+}
+.banner-section {
+    padding: 2rem !important;
+    border-radius: 8px !important;
+    box-shadow: 0px 4px 6px rgb(0 0 0 / 10%) !important;
+}
+
+.cta-button {
+  background-color: #6435c9 !important;
+  color: white !important;
+}
+
+.contact-opt {
+  color: white !important;
+}
+
+.mg-2 {
+  margin-right: 2rem !important;
+}
+
+.font-number {
+  font-size: 3rem;
+    color: #d4d4d4;
+    font-weight: bold;
 }
